# ToDo-Notes

./: .gitignore  Makefile  README.md  docker-compose.yml  requirements.txt
.github/workflows/: deploy.yml
NoteFlow/: main.py  noteflow.spec
NoteFlow/app/: __init__.py
NoteFlow/app/database/: schema.sql
NoteFlow/app/services/: backup_service.py  note_service.py
NoteFlow/app/themes/: theme_manager.py
NoteFlow/app/views/: main_window.py  notes_view.py  settings_view.py  tasks_view.py
NoteFlow/app/widgets/: sidebar.py  splash_screen.py
app/config/: settings_manager.py
app/database/: connection.py
app/models/: entities.py
app/services/: notification_service.py  task_service.py
app/views/: pomodoro_view.py
app/widgets/: common.py  quick_add.py
backend/: .env.example  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/routes/: auth.py  folders.py  notes.py  pomodoro.py  tasks.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: session.py
backend/app/models/: orm.py
backend/app/schemas/: schemas.py
backend/app/services/: cache_service.py  note_service.py  s3_service.py  task_service.py
backend/app/utils/: logging.py  pagination.py  validators.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py
backend/tests/: conftest.py  test_api.py  test_folders_tags.py  test_pomodoro_search.py  test_projects_tasks.py
infrastructure/docker/: Dockerfile.api
scripts/: bootstrap-tfstate.sh  deploy.sh  localstack-init.sh
(+16 files in other folders)
