[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "noteflow-api"
version = "1.0.0"
description = "NoteFlow Notes & Tasks API — AWS Backend"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008", "B904"]
exclude = ["migrations/versions/"]

[tool.ruff.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = false
exclude = ["migrations/"]

[tool.coverage.run]
source = ["app"]
omit = ["app/main.py", "migrations/*", "tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
show_missing = true
fail_under = 70
